Fix style on mobile

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -47,6 +47,12 @@ h1, h2, h3, h4, h5 {
 	position: fixed !important;
 	top: 110px;
 	right: 0;
-	z-index: 9999;
+	z-index: 88;
 	padding: 0;
+}
+
+@media (max-width: 767px) {
+	#main {
+		margin-top: 0;
+	}
 }
