--- a/src/assets/styles/block/_search.scss
+++ b/src/assets/styles/block/_search.scss
@@ -28,9 +28,17 @@
 
 @media (max-width: 767px) {
 	.blockSearch {
-		padding: 10px 0;
+		padding: 10px;
+		position: relative;
+		top: 0;
 		.container {
-			padding: 0 10px;
+			padding: 0;
+			.row {
+				margin: 0;
+			}
+			.col-sm-5, .col-sm-2 {
+				padding: 0;
+			}
 		}
 		.form-control {
 			margin-bottom: 10px;
